RESOLVED FIXED170346
Mac cmake buildfix after r214403
https://bugs.webkit.org/show_bug.cgi?id=170346
Summary Mac cmake buildfix after r214403
Csaba Osztrogonác
Reported 2017-03-31 09:36:36 PDT
https://trac.webkit.org/changeset/214403/webkit broke the Apple Mac cmake build 6 days ago, let's try to fix it. build log: In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:83: In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/UIProcess/Cocoa/WebViewImpl.h:32: /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/Shared/API/Cocoa/WKDragDestinationAction.h:33:5: error: redefinition of enumerator 'WKDragDestinationActionNone' WKDragDestinationActionNone = 0, ^ /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/Shared/API/Cocoa/WKDragDestinationAction.h:33:5: note: previous definition is here WKDragDestinationActionNone = 0, ^ In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:83: In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/UIProcess/Cocoa/WebViewImpl.h:32: /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/Shared/API/Cocoa/WKDragDestinationAction.h:34:5: error: redefinition of enumerator 'WKDragDestinationActionDHTML' WKDragDestinationActionDHTML = 1, ^ /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebKit2/Shared/API/Cocoa/WKDragDestinationAction.h:34:5: note: previous definition is here WKDragDestinationActionDHTML = 1, ^ ...
Attachments
Patch (1.21 KB, patch)
2017-03-31 09:37 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2017-03-31 09:37:46 PDT
WebKit Commit Bot
Comment 2 2017-03-31 10:28:46 PDT
Comment on attachment 305975 [details] Patch Clearing flags on attachment: 305975 Committed r214672: <http://trac.webkit.org/changeset/214672>
WebKit Commit Bot
Comment 3 2017-03-31 10:28:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.