Mac cmake buildfix after r214403 https://bugs.webkit.org/show_bug.cgi?id=170346

Unreviewed speculative buildfix.


* UIProcess/API/Cocoa/WKWebView.mm:


Canonical link: https://commits.webkit.org/187258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214672 268f45cc-cd09-0410-ab3c-d52691b4dbfc